force-app/hfs-backend/main/default/objects/hfs_Home_Dashboard_Preview__mdt/hfs_Home_Dashboard_Preview__mdt.object-meta.xml
<CustomObject>
    <description>Internal preview configuration for the Home dashboard (HFS-32). Used ONLY as a fallback for internal users (e.g. admins/testers) who have no partner Account, so the dashboard can be tested before Customer Community self-registration exists. Real partner users always resolve via Contact-&gt;Account and never use this config.</description>
    <label>Home Dashboard Preview</label>
    <pluralLabel>Home Dashboard Preview</pluralLabel>
</CustomObject>