force-app/hfs-backend/main/default/objects/hfs_Home_Dashboard_Preview__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, internal users without a partner Account see the dashboard for the configured preview Account. Set FALSE (or leave the org with no active record) once Customer Community users can self-register - real partners never use this path.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>