force-app/hfs-backend/main/default/objects/hfs_Home_Dashboard_Preview__mdt/fields/Preview_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Preview_Account_Id__c</fullName>
    <description>Optional. Exact 15/18-char Id of the dealer/distributor Account to preview. When set, it takes precedence over Preview_Account_Name__c (no name lookup query is issued).</description>
    <label>Preview Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>