force-app/hfs-backend/main/default/objects/hfs_Home_Dashboard_Preview__mdt/fields/Preview_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Preview_Account_Name__c</fullName>
    <description>Exact Name of the dealer/distributor Account whose data the internal preview should show (e.g. Mile High Sinclair). Resolved to an Account Id at runtime. Ignored when Preview_Account_Id__c is set.</description>
    <label>Preview Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>